# bb25

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarks/: README.md  run_benchmark.py
docs/: pyodide.md  sample_usage.py
scripts/: build_pyodide.sh
src/: attention_weights.rs  bayesian_scorer.rs  block_max_index.rs  calibration.rs  debug.rs  experiments.rs  fusion.rs  hybrid_scorer.rs  learnable_weights.rs  lib.rs  main.rs  math_utils.rs  metrics.rs  multi_head_attention.rs  probability.rs  pybindings.rs
tests/: test_attention_weights.rs  test_block_max_index.rs  test_calibration.rs  test_debug.py  test_fusion.py  test_gating.rs  test_learnable_weights.rs  test_metrics.py  test_multi_head.rs  test_probability.py  test_smoke.py  test_temporal.rs
